apps/play/src/style.css
/* ... */
/* Layout variants */
.control-grid.layout-desktop {
  grid-template-areas:
    'env env sample space'
    'env env filter feedback'
    'loop trim misc lfo'
    'toggle keyboard keyboard keyboard';
}

.control-grid.layout-mobile {
  grid-template-columns: 1fr;
  /* width: clamp(350px, auto, 100%);
  border: none; */
  grid-template-areas:
    'sample'
    'env'
    'keyboard'
    'loop'
    'trim'
    'space'
    'filter'
    'misc'
    'feedback'
    'lfo'
    'toggle';
}

.control-grid.layout-tablet {
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    'env sample'
    'env filter'
    'loop trim'
    'space misc'
    'feedback feedback'
    'lfo lfo'
    'keyboard keyboard'
    'toggle .';
}

/* Tablet */
.control-grid.layout-tablet .row-collapse-icon {
  display: none;
  pointer-events: none;
}

.control-grid.layout-tablet .control-group {
  box-sizing: border-box;
  overflow: hidden;
  max-width: 100%;
  min-width: 0;
  justify-content: center;
}

.control-grid.layout-tablet .env-group {
  min-height: 150px;
}

.control-grid.layout-tablet .keyboard-group {
  overflow-x: auto;
  overflow-y: hidden;
}

.control-grid.layout-tablet piano-keyboard {
  max-width: 100%;
  overflow-x: auto;
}

.control-grid.layout-tablet envelope-switcher {
  max-width: 100%;
  overflow: hidden;
}

.control-grid.layout-tablet piano-keyboard webaudio-keyboard {
  width: 100%;
  max-width: calc(100dvw - 2rem);
}

/* Mobile */

.control-grid.layout-mobile {
  max-width: 100%;
  overflow: hidden;
}

.control-grid.layout-mobile .row-collapse-icon {
  display: none;
  pointer-events: none;
}

.control-grid.layout-mobile .control-group {
  box-sizing: border-box;
  overflow: hidden;
  max-width: 100%;
  min-width: 0;
  justify-content: center;
}

.control-grid.layout-mobile .env-group {
  min-height: 150px;
}

.control-grid.layout-mobile .keyboard-group {
  overflow-x: auto;
  overflow-y: hidden;
}

.control-grid.layout-mobile piano-keyboard {
  max-width: 100%;
  overflow-x: auto;
}

.control-grid.layout-mobile piano-keyboard webaudio-keyboard {
  width: 100%;
  max-width: calc(100dvw - 2rem);
}

/* ____ */

.flex-col {
  display: flex;
  flex-direction: column;
  justify-content: center;

  align-items: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
}

.envelope-buttons {
  display: flex;
  gap: 0 0.5rem;
  width: fit-content;
}

.envelope-buttons > .button {
  padding: 0 0.2rem;
  border: solid 1px rgba(0, 0, 0, 0);
  border-radius: 5%;

  color: black;
  background-color: #cccccce2;

  text-shadow: none;
}

.envelope-buttons .button.selected {
  background-color: #ddd;
}

/* GROUPS */

.control-group {
  display: flex;

  align-self: start;
  justify-self: center;

  border: none;
  border: 1px solid #a8a6a692;
  border-radius: 0.5rem;
  padding: 0.5rem;
  gap: 0.5rem;

  background-color: var(--bg-color-3);

  will-change: max-height, opacity, width, background-color, padding, border;
  transition: all 0.2s ease;
}

.control-group > legend {
  text-align: center;
  font-weight: normal;
  color: var(--color-text);
}

.control-group.collapsed .expandable-content {
  max-height: 0;
  opacity: 0;
  width: fit-content;

  pointer-events: none;
  overflow: hidden;
}

.control-group.collapsed {
  border: none;
  border-top: 1px solid #a8a6a692;
  border-radius: 0;
  padding: 0.5rem 0rem;

  background-color: transparent;
}

.expandable-content {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  align-items: flex-start;

  max-height: 60dvh;
  overflow: hidden;
  opacity: 1;
  transition:
    max-height 0.2s ease,
    opacity 0.2s ease;
}

.expandable-legend {
  cursor: pointer;
  -webkit-user-select: none;
  user-select: none;
}

.feedback-group {
  grid-area: feedback;
}

.env-group {
  grid-area: env;
  height: auto;
  min-height: 300px;
}

.env-group.collapsed {
  grid-area: env;
  height: auto;
  min-height: 0;
}

.sample-group {
  grid-area: sample;
}

.main-controls-group {
  grid-area: main-ctrl;
}

.space-group {
  grid-area: space;
}

.loop-group {
  grid-area: loop;
}

.lfo-container {
  grid-area: lfo;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

/* can use .amp-lfo-group and .pitch-lfo-group if needed */

.mod-group {
  grid-area: mod;
  padding: 0 1rem 1rem 1rem;
}

.trim-group {
  grid-area: trim;
}

.filter-group {
  grid-area: filter;
}

.misc-group {
  grid-area: misc;
}

.distortion-group {
  grid-area: distortion;
}

.toggle-group {
  grid-area: toggle;
  width: 50%;
  place-self: center;
}

.toggle-group > div {
  display: grid;
  justify-content: center;

  grid-template-columns: repeat(3, 1fr);
  grid-auto-flow: row;
  gap: 0.2rem;
}

.toggle-group sampler-status {
  display: flex;
  align-items: center;

  color: #b7b5b5d6;
}

/** KEYBOARD **/

.keyboard-group {
  grid-area: keyboard;

  position: relative;

  min-height: fit-content;
  height: fit-content;

  align-items: center;
  justify-content: center;
}

.keyboard-controls {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  padding-right: 1rem;
}

piano-keyboard.hidden {
  opacity: 0;
  pointer-events: none;
}

piano-keyboard.visible {
  opacity: 1;
}

.keyboard-visual-toggle {
  background: #444;
  color: var(--color-text);
  border: 1px solid #666;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  cursor: pointer;
  font-size: 0.9rem;

  width: fit-content;
  transition: all 0.2s ease;
}

.keyboard-visual-toggle:active {
  background: #333;
}

.keyboard-visual {
  position: absolute;
  top: -20%;
  left: 5%;
  width: 800px;
  height: auto;
  background: transparent;
  border: none;
  transition: all 0.2s ease;
  overflow: visible;
  clip-path: inset(0 20% 0 0);
}

.keyboard-visual.hidden {
  opacity: 0;
  pointer-events: none;
}

.keyboard-visual.visible {
  opacity: 1;
  pointer-events: all;
}
/* ... */

